--- a/order-for-home/index.html
+++ b/order-for-home/index.html
@@ -121,7 +121,7 @@
 <a class="right-nav__link" href="https://www.gigglingsquid.com/frequently-asked-questions/">
 <span class="hover-underline --purple">FAQs</span>
 </a>
-</nav>
+ </nav>
 <nav class="right-nav__cell right-nav__cell--menu-3">
 <a class="right-nav__link" href="https://www.gigglingsquid.com/allergies/">
 <span class="hover-underline --purple">Allergies</span>
@@ -146,7 +146,7 @@
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple cky-banner-element" href="#cookie-settings">Cookie Settings</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Gift</a>
+<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
 </div>
@@ -355,7 +355,7 @@ Yes, our chicken and lamb are Halal across all our restaurants except for the fo
 <div class="faq">
 <div class="faq__background">
 <div class="faq__title">
-<div class="faq__icon"></div>
+ <div class="faq__icon"></div>
 Do you do takeaway?
 </div>
 <div class="faq__collapse">
@@ -498,7 +498,7 @@ Can you redeem gift cards and e-vouchers online?
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
 <span class="bottom-nav__separator">/</span>
-<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Gift</a>
+<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
