--- a/restaurant/stratford-upon-avon/index.html
+++ b/restaurant/stratford-upon-avon/index.html
@@ -121,7 +121,7 @@
 <a class="right-nav__link" href="https://www.gigglingsquid.com/frequently-asked-questions/">
 <span class="hover-underline --purple">FAQs</span>
 </a>
- </nav>
+</nav>
 <nav class="right-nav__cell right-nav__cell--menu-3">
 <a class="right-nav__link" href="https://www.gigglingsquid.com/allergies/">
 <span class="hover-underline --purple">Allergies</span>
@@ -146,7 +146,7 @@
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple cky-banner-element" href="#cookie-settings">Cookie Settings</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Gift</a>
+<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
 </div>
@@ -479,7 +479,7 @@ Google Maps
 </div>
 </div>
 <footer class="section footer">
- <div class="top-nav">
+<div class="top-nav">
 <div class="grid top-nav__background">
 <div class="top-nav__cell top-nav__cell--social">
 <a class="social-link" href="https://www.facebook.com/gigglingsquid" target="_blank">
@@ -537,7 +537,7 @@ Google Maps
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
 <span class="bottom-nav__separator">/</span>
-<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Gift</a>
+<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
