--- a/allergies/index.html
+++ b/allergies/index.html
@@ -146,7 +146,7 @@
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple cky-banner-element" href="#cookie-settings">Cookie Settings</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Give</a>
+<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/charity/">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
 </div>
@@ -281,7 +281,7 @@
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
 <span class="bottom-nav__separator">/</span>
-<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Give</a>
+<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/charity/">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
