--- a/sustainability/index.html
+++ b/sustainability/index.html
@@ -66,7 +66,7 @@
 <button class="button --pink --fill" data-book-button>Book</button><button class="button --order --hover" data-order-button>Order</button> </div>
 <button class="burger">
 <span class="burger__inner"></span>
- </button>
+</button>
 </div>
 </header>
 <section class="section section--full-bleed main-menu">
@@ -138,7 +138,7 @@
 </div>
 </div>
 </div>
- </div>
+</div>
 <div class="bottom-nav">
 <nav>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/terms-conditions/">Terms &#038; Conditions</a>
@@ -146,7 +146,7 @@
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple cky-banner-element" href="#cookie-settings">Cookie Settings</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Give</a>
+<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/charity/">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
 </div>
@@ -431,7 +431,7 @@ We use LED lights in all our new restaurants and will be upgrading older sites w
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
 <span class="bottom-nav__separator">/</span>
-<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/?page_id=358">Giggle and Give</a>
+<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/charity/">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
