--- a/menu/index.html
+++ b/menu/index.html
@@ -146,7 +146,6 @@
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple cky-banner-element" href="#cookie-settings">Cookie Settings</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/charity/">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
 </div>
@@ -353,7 +352,7 @@
 <svg class="nav__arrow nav__arrow--next" xmlns="http://www.w3.org/2000/svg" width="37" height="37" viewbox="0 0 37 37">
 <g transform="translate(37 37) rotate(180)">
 <g class="nav__circle-icon" transform="translate(0 0)" fill="none" stroke-width="2">
-<rect width="37" height="37" rx="18.5" stroke="none"></rect>
+ <rect width="37" height="37" rx="18.5" stroke="none"></rect>
 <rect x="1" y="1" width="35" height="35" rx="17.5" fill="none"></rect>
 </g>
 <path class="nav__arrow-icon" d="M6.575,13.15,0,6.575,6.575,0" transform="translate(14.267 12.492)" fill="none" stroke-linejoin="round" stroke-width="2"></path>
@@ -405,6 +404,8 @@
 <br>
 <a class="top-nav__link hover-underline --purple" href="https://www.gigglingsquid.com/news/">News</a>
 <br>
+<a class="top-nav__link hover-underline --purple" href="https://www.gigglingsquid.com/charity/">Charity</a>
+<br>
 </nav>
 <nav class="top-nav__cell top-nav__cell--menu-3">
 <a class="top-nav__link hover-underline --purple" href="https://www.gigglingsquid.com/frequently-asked-questions/">FAQs</a>
@@ -426,14 +427,12 @@
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/terms-conditions/">Terms &#038; Conditions</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/privacy/">Privacy</a>
-<span class="bottom-nav__separator">/</span>
+ <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple cky-banner-element" href="#cookie-settings">Cookie Settings</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span>
-<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/charity/">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
