--- a/gift-cards/index.html
+++ b/gift-cards/index.html
@@ -121,7 +121,7 @@
 <a class="right-nav__link" href="https://www.gigglingsquid.com/frequently-asked-questions/">
 <span class="hover-underline --purple">FAQs</span>
 </a>
- </nav>
+</nav>
 <nav class="right-nav__cell right-nav__cell--menu-3">
 <a class="right-nav__link" href="https://www.gigglingsquid.com/allergies/">
 <span class="hover-underline --purple">Allergies</span>
@@ -146,7 +146,6 @@
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple cky-banner-element" href="#cookie-settings">Cookie Settings</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/charity/">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
 </div>
@@ -415,6 +414,8 @@ You can buy physical gift cards in all Giggling Squid restaurants and E-vouchers
 <br>
 <a class="top-nav__link hover-underline --purple" href="https://www.gigglingsquid.com/news/">News</a>
 <br>
+<a class="top-nav__link hover-underline --purple" href="https://www.gigglingsquid.com/charity/">Charity</a>
+<br>
 </nav>
 <nav class="top-nav__cell top-nav__cell--menu-3">
 <a class="top-nav__link hover-underline --purple" href="https://www.gigglingsquid.com/frequently-asked-questions/">FAQs</a>
@@ -442,8 +443,6 @@ You can buy physical gift cards in all Giggling Squid restaurants and E-vouchers
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span>
-<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/charity/">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
