--- a/order-for-home/index.html
+++ b/order-for-home/index.html
@@ -146,7 +146,6 @@
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple cky-banner-element" href="#cookie-settings">Cookie Settings</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/charity/">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span> <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
 </div>
@@ -374,7 +373,7 @@ Can you redeem gift cards and e-vouchers online?
 <div class="faq__collapse">
 <div class="faq__content">
 <span class="NormalTextRun BCX0 SCXW243839313">Yes, you can use e-vouchers for online <a href="https://gigglingsquid.orderswift.com/">Click &amp; Collect</a> orders. Gift cards and e</span><span class="NormalTextRun BCX0 SCXW243839313">-vouchers cannot currently be used on delivery orders.</span>
-</div>
+ </div>
 </div>
 </div>
 </div>
@@ -470,6 +469,8 @@ Can you redeem gift cards and e-vouchers online?
 <br>
 <a class="top-nav__link hover-underline --purple" href="https://www.gigglingsquid.com/news/">News</a>
 <br>
+<a class="top-nav__link hover-underline --purple" href="https://www.gigglingsquid.com/charity/">Charity</a>
+<br>
 </nav>
 <nav class="top-nav__cell top-nav__cell--menu-3">
 <a class="top-nav__link hover-underline --purple" href="https://www.gigglingsquid.com/frequently-asked-questions/">FAQs</a>
@@ -497,8 +498,6 @@ Can you redeem gift cards and e-vouchers online?
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/covid-safety/">Covid Safety</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/modern-slavery-policy/">Modern Slavery</a>
-<span class="bottom-nav__separator">/</span>
-<a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/charity/">Giggle and Give</a>
 <span class="bottom-nav__separator">/</span>
 <a class="bottom-nav__link hover-underline --purple " href="https://www.gigglingsquid.com/sustainability/">Sustainability</a>
 </nav>
